// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectTagWidget should render multiSelectTagWidget 1`] = `
<div
  className="dropdown"
>
  <button
    className="theme-dropdown-toggle dropdown-toggle"
    onClick={[Function]}
    type="button"
  >
    <span
      className="caret"
    />
  </button>
  <div
    className="theme-wrapper form-control"
  >
    <Translate(Badge)
      label="Foo"
      onDelete={[Function]}
      selected={false}
      value="foo-1"
    />
    <Typeahead
      autoFocus={false}
      disabled={false}
      docked={false}
      id="42"
      isLoadingText="Loading..."
      items={null}
      multiSection={false}
      noResultText="No result."
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onSelect={[Function]}
      position="left"
      readOnly={false}
      searching={false}
      searchingText="Searching for matches..."
      theme={
        Object {
          "container": "theme-typeahead",
          "itemsContainer": "theme-items-container items-container",
        }
      }
      value=""
    />
  </div>
</div>
`;

exports[`MultiSelectTagWidget should render multiSelectTagWidget dropdown 1`] = `
<div
  className="theme-items-container items-container theme-item-container"
  id="react-autowhatever-42"
  key="react-autowhatever-42-items-container"
  role="listbox"
>
  <ul
    className="theme-items"
    key="react-autowhatever-42-items-list"
    role="listbox"
  >
    <li
      aria-selected={true}
      className="theme-item-highlighted tc-typeahead-item-highlighted"
      id="react-autowhatever-42--item-0"
      onMouseDown={[Function]}
      role="option"
    >
      <div
        className="theme-item"
        title="Bar"
      >
        <span
          className="theme-item-title tc-typeahead-item-title"
        >
          <span>
            Bar
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`MultiSelectTagWidget should render section title when items has category 1`] = `
<div
  className="theme-items-container items-container theme-item-container"
  id="react-autowhatever-42"
  key="react-autowhatever-42-items-container"
  role="listbox"
>
  <div
    className="theme-section-container tc-typeahead-section-container"
    key="react-autowhatever-42-section-0-container"
  >
    <div
      key="react-autowhatever-42-section-0-title"
      style={Object {}}
    >
      <div
        className="theme-section-header tc-typeahead-section-header"
      >
        <span
          className="theme-section-header-title tc-typeahead-section-header-title"
        >
          pet
        </span>
      </div>
    </div>
    <ul
      className="theme-items"
      key="react-autowhatever-42-section-0-items-list"
      role="listbox"
    >
      <li
        aria-selected={true}
        className="theme-item-highlighted tc-typeahead-item-highlighted"
        id="react-autowhatever-42-section-0-item-0"
        onMouseDown={[Function]}
        role="option"
      >
        <div
          className="theme-item"
          title="Puppy"
        >
          <span
            className="theme-item-title tc-typeahead-item-title"
          >
            <span>
              Puppy
            </span>
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`MultiSelectTagWidget should take default message when there isnt items 1`] = `
<div
  className="theme-items-container items-container theme-item-container theme-no-result"
  id="react-autowhatever-42"
  key="react-autowhatever-42-items-container"
  role="listbox"
>
  <span
    className="no-result"
  >
    No result.
  </span>
</div>
`;
